# persephone_platform

./: .dockerignore  CHANGELOG.md  README.md  docker-compose.frontend.yml
apps/ui/: README.md  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/ui/app/: globals.css  layout.tsx  page.tsx
charts/product/: Chart.yaml  values.yaml
docker/: ui.Dockerfile
docs/: backend_requirements.md
ops/grafana/: README.md
ops/loki/: README.md
ops/prometheus/: README.md
persephone/: README.md  docker-compose.yml
persephone/agent/: agent.py  gpu_metrics.py  runner.py
persephone/docker/: agent.Dockerfile  controller.Dockerfile
persephone_api/: .env.example  README.md  alembic.ini  pyproject.toml
persephone_api/apps/api/: deps.py  errors.py  instrumentation.py  logging.py  main.py  settings.py
persephone_api/apps/api/models/: __init__.py  base.py  run.py  user.py
persephone_api/apps/api/repositories/: base.py  runs.py  users.py
persephone_api/apps/api/routers/: __init__.py  auth.py  compute.py  deploy.py  monitor.py  prepare.py  runs.py  uploads.py
persephone_api/apps/api/schemas/: auth.py  compute.py  runs.py  uploads.py
persephone_api/apps/api/services/: redis.py  runpod.py  runs.py  s3.py  security.py
persephone_api/infra/: compose.yaml
persephone_api/infra/docker/: Dockerfile  entrypoint.sh
persephone_api/migrations/: env.py
persephone_api/migrations/versions/: 0001_init.py
persephone_api/tests/: conftest.py  test_auth.py  test_healthz.py  test_runs.py  test_uploads.py
pipelines/argo-workflows/: README.md
(+20 files in other folders)
